# whichvlm

./: LICENSE  NOTICE  README.md  RECONSTRUCTION_COMMITS.md  UPSTREAM_NOTES.md  pyproject.toml
.github/: labels.yml
benchmarks/: real_hardware.py
src/: runtime.py
src/output/: json_output.py
src/whichvlm/: __init__.py  __main__.py  cli.py  constants.py  runtime.py  utils.py
src/whichvlm/data/: gpu.py  lineage.py  quantization.py  vlm_inventory.py
src/whichvlm/engine/: compatibility.py  performance.py  quantization.py  ranker.py  types.py  vram.py  workload.py
src/whichvlm/hardware/: amd.py  apple.py  cpu.py  detector.py  gpu_db.py  gpu_simulator.py  intel.py  memory.py  nvidia.py  types.py  windows.py
src/whichvlm/models/: benchmark.py  cache.py  fetcher.py  grouper.py  integrations.py  package_graph.py  types.py
src/whichvlm/models/benchmark_sources/: __init__.py  aa_index.py  aider.py  chatbot_arena.py  livebench.py  (+2 more)
src/whichvlm/output/: _console.py  display.py  formatting.py  json_output.py  markdown.py  plan.py  ranking.py  upgrade.py
tests/: test_aa_index.py  test_amd_detection.py  test_asahi_detection.py  test_benchmark_lookup.py  test_cache_encoding.py  test_cli.py  test_compatibility.py  test_fetcher.py  test_gpu_db.py  test_gpu_simulator.py  test_grouper.py  test_gtx1650_variants.py  test_http.py  test_intel_gpu.py  test_kepler_gpus.py  test_markdown_output.py  test_memory.py  test_nvidia_detection.py  test_output_formatting.py  test_p1_p3_regressions.py  test_plan.py  test_quantization.py  test_r3_regressions.py  test_ranker.py  test_ranking_edge_cases.py  test_ranking_quality_regressions.py  test_real_hardware_benchmarks.py  test_runtime.py  test_utils.py  test_vlm_inventory.py  test_vram.py  test_windows_cpu_detection.py  test_windows_gpu.py
