[project]
name = "whichvlm"
version = "0.1.0"
description = "Find local VLMs that can run on your hardware"
authors = [{name = "whichvlm contributors"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
homepage = "https://github.com/the whichvlm contributors/whichvlm"
repository = "https://github.com/the whichvlm contributors/whichvlm"
keywords = ["vlm", "vision-language-model", "multimodal", "gpu", "vram", "huggingface", "inference", "hardware", "cli", "recommendation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "dbgpu[fuzz]>=1.0",
    "nvidia-ml-py>=12.0",
]

[project.urls]
Upstream = "https://github.com/the whichvlm contributors/compatible multimodal source"

[project.scripts]
whichvlm = "whichvlm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whichvlm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_hardware: opt-in benchmarks that use actual hardware, downloads, and runtimes",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyarrow>=23.0.1",
]
